= Asciidoctor Tabs Changelog
:url-repo: https://github.com/asciidoctor/asciidoctor-tabs

This document provides a curated view of the changes to Asciidoctor Tabs per release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== 1.0.0-beta.1 (2023-01-30) - @mojavelinux

=== Added

* Pass through role attribute on tabs block (#43)
* Add configuration option to save sync selection (i.e., sync ID) in local or session storage (#44)

=== Fixed

* Use correct selector to unhide panel of first tab while tabs are loading

=== Details

{url-repo}/releases/tag/v1.0.0-beta.1[git tag] | {url-repo}/compare/v1.0.0-alpha.12\...v1.0.0-beta.1[full diff]

== 1.0.0-alpha.12 (2022-12-23) - @mojavelinux

=== Fixed

* Wrap div with class `tablecontainer` around tables inside tabpanel to prevent tables from overflowing bounds while honoring width (#41)

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.12[git tag] | {url-repo}/compare/v1.0.0-alpha.11\...v1.0.0-alpha.12[full diff]

== 1.0.0-alpha.11 (2022-12-08) - @mojavelinux

=== Changed

* *BREAKING CHANGE:* Align terminology with ARIA / Open UI recommendations for a tabs component; requires change to custom CSS (#38)
 ** `.tabset` becomes `.tabs`
 ** `.tabs` becomes `.tablist`
 ** `.tab-panel` becomes `.tabpanel`
 ** `.is-active` for selected tab becomes `.is-selected`
 ** `.is-active` for visible panel becomes `:not(.is-hidden)`
* Assign ARIA attributes in JavaScript (i.e., role, aria-controls, aria-selected, hidden) where recommended (#38)
* *BREAKING CHANGE:* Convert tabs block to openblock instead of passthrough block (#15)
 ** `openblock` class added to `.tabs`
 ** `.tablist` becomes child of `.content`
 ** `.tabpanel` elements become siblings of `.tablist`

=== Fixed

* Clear margin on .tablist.ulist and child ul

=== Details

{url-repo}/releases/tag/v1.0.0-alpha.11[git tag] | {url-repo}/compare/v1.0.0-alpha.10\...v1.0.0-alpha.11[full diff]
